css/style.css
#about {
    background: url(http://i.imgur.com/UJLG9JZ.jpg) no-repeat center center fixed;
    width: 100%;
    height: 100vh;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.vertical-center {
    min-height: 100%;
    min-height: 100vh;
    display: flex;
    align-items: center;
}

nav {
    background: rgba(0, 0, 0, 0.8);
}

.active {
    background: rgba(0, 0, 0, 1);
    border: 1px solid #2697e8;
    
}

input, textarea, button{
	font-family: 'Montserrat', sans-serif;
}

::-webkit-input-placeholder{color: #777;}
:-moz-placeholder { /* Firefox 18- */ color: #777;}
::-moz-placeholder {  /* Firefox 19+ */ color: #777;}
:-ms-input-placeholder {color: #777;}

#contact input:hover, #contact textarea:hover{
	border: 1px solid #888;
}
#contact input:focus, #contact textarea:focus{
	border: 1px solid #777;
}

header {
    padding: 80px;
}

.name {
    color: #fff;
    text-transform: uppercase;
    font-family: 'Montserrat', ;
    font-size: 10vmin;
}

.about {
    color: #fff;
    font-size: 6vmin;
    font-family: "Roboto", sans-serif;
    ;
}

#snowflakes1 {
    background: url('../img/snowflakes.png')no-repeat;
    width: 24px;
    height: 21px;
    margin: 0 auto;
    display: block;
    position: relative;
    bottom: -64px;
    left: -150px;
}

#snowflakes2 {
    background: url('../img/snowflakes.png')no-repeat;
    width: 24px;
    height: 21px;
    margin: 0 auto;
    display: block;
    position: relative;
    bottom: -43px;
    right: -148px;
}

#portfolio {
    background: url(https://wallpaperscraft.com/image/keyboard_button_bw_enter_31023_1920x1080.jpg) no-repeat center center fixed;
    width: 100%;
    height: 100vh;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
#portfolio h1 {
    color: #fff;
    font-family: "Montserrat";
    font-size: 60px;
}

blockquote {
    font-family: serif;
    font-size: 40px;
    font-style: italic;
    margin: 0.25em 0;
    padding: 0.25em 40px;
    line-height: 1.45;
    position: relative;
    color: #383838;
    background-color: #fff;
}

blockqout

blockquote cite {
    color: #999999;
    font-size: 20px;
    display: block;
    margin-top: 5px;
}

blockquote cite:before{
    content: "\2014 \2009";
}

blockquote:before {
    display: block;
    content: "\201C";
    font-size: 80px;
    position: absolute;
    left: -20px;
    top: -20;
    color: #7a7a7a;
}

#quote {
    background-color: #333347;
}

body { background: #e8e8e8; }
.container { margin: 0 auto; }



/* Example wrapper */
.wrap {
	position: relative;
	margin: 3em 0;
}

/* Frame */
.frame {
	height: 400px;
	overflow: hidden;
}
.frame ul {
	list-style: none;
	margin: 0;
	padding: 0;
	height: 100%;
	font-size: 50px;
}
.frame ul li {
	float: left;
	width: 400px;
	height: 400px;
	margin: 0 1px 0 0;
	padding: 0;
	background: #333;
	color: #ddd;
	text-align: center;
	cursor: pointer;
    border-radius: 10px;
}
.frame ul li.active {
	border-color: 
}

/* Scrollbar */
.scrollbar {
	margin: 1em 0 0 0;
	height: 15px;
	background: #333;
	line-height: 0;
    border-radius: 10px;
}
.scrollbar .handle {
	width: 100px;
	height: 15px;
	background: #fff;
	cursor: pointer;
    border-radius: 10px;
}
.scrollbar .handle .mousearea {
	position: absolute;
	top: -9px;
	left: 0;
	width: 100%;
	height: 15px;
}

/* Pages */
.pages {
	list-style: none;
	margin: 20px 0;
	padding: 0;
	text-align: center;
}
.pages li {
	display: inline-block;
	width: 14px;
	height: 14px;
	margin: 0 4px;
	border-radius: 10px;
	cursor: pointer;
	overflow: hidden;
	background: #fff;
	box-shadow: inset 0 0 0 1px rgba(0,0,0,.2);
}
.pages li:hover {
	border-color: #2697e8;
}
.pages li.active {
	border-color: #2697e8;
}

/* Controls */
.controls { margin: 25px 0; text-align: center; }

img {
    max-width: 100%;
}

li p {
    font-size: 30px;
    margin-top: 330px;
    background-color: black;
    opacity: 0.4;
}


#skill {
    min-height: 100vh;
    background-color: #069751;
}
.ribbon {
    background: url('../img/ribbon.png') no-repeat;
    width: 256px;
    height: 48px;
    margin: 0 auto;
    display: block;
    position: relative;
    top: 65px;
}

#skill h1 {
    color: #fff;
    font-family: 'Montserrat' monospace;
    font-size: 30;
}

#skill img {
    width: 200px;
    height: 200px;
    display: block;
    margin: 0 auto;
    transition: .2s all ease-out;
}

#skill img:hover {
    border: 5px #2697e8 solid;
}

h2 {
    color: #fff;
    font-family: 'Montserrat'
}

.title-bar {
    margin: 1px auto 10px auto;
    width: 100px;
    border-bottom: 1px solid #d9d9d9;
}

button {
    border: 2px solid #2697e8;
}

.navbar-toggle {
    background: rgba(38, 151, 232, 0.45)
}

.navbar-toggle .icon-bar {
  background-color: #2697e8
}


#contact .container {
    width: 90%;
	padding: 15px;
	margin: 50px auto;
}

#contact h2{
	text-align: center;
	text-transform: uppercase;
	color: #f55;
}

#contact input[type="text"],#contact input[type="email"], #contact textarea{
	display: block;
	padding: 10px;
	margin: 10px auto;
	width: 90%;
    font-size: 18px;
	color: #777;
    border: 1px solid #ccc;
}



#contact textarea{
    font-size: 16px;
	max-width: 90%;
	min-width: 90%;
	max-height: 115px;
	min-height: 115px;
    resize: none;
}

#send-button{
	text-align: center;
    display: block;
    margin: 10px auto;
    cursor: pointer;
    background: #e74c3c;
	color: #fff;
    border: none;
	width: 100%;
    min-width: 90%;
    max-width: 90%;
	padding: 10px 0;
	font-size: 20px;
	text-transform: uppercase;
	transition: .5s ease;
}



#send-button:hover{
	background: #c0392b;
}

#send-button:focus{
	position: relative;
	top: 2px;
}

